# cpp_library_template

./: CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt  example.cpp
modules.cmake/: project.cmake
script/: README.md  create_project_cmakes.py
src/: CMakeLists.txt
test/test01/: CMakeLists.txt
